# eme_selex

./: LICENSE  README.md  pyproject.toml  setup.cfg
docs/: .gitattributes  _config.yml  _toc.yml  conf.py  coverage.md  requirements.txt  visualisation.md  workflow.md
docs/_build/.doctrees/: coverage.doctree  environment.pickle  top_kmers.doctree  visualisation.doctree  workflow.doctree
docs/_build/html/: .buildinfo  Notebook.html  coverage.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  top_kmers.html  visualisation.html  workflow.html
docs/_build/html/_sources/: top_kmers.md  visualisation.md  workflow.md
docs/_build/jupyter_execute/: Notebook.py  coverage.ipynb  coverage.py  top_kmers.ipynb  top_kmers.py  visualisation.py  workflow.ipynb  workflow.py
docs/data/: melt_fold_change_mean.tsv  melt_fractions_fold_change.tsv  melt_fractions_mean.tsv  metadata.tsv  results_5.pickle  results_5_models.pickle  results_ZFC4_None_5.bz2  spearman_r2_k_5_10.tsv  top_100.pickle
src/eme_selex/: __init__.py  decorators.py  eme.py  hashing.py  readers.py  sequence.py
tests/unit_tests/: test_sequence.py
