[metadata]
name = eme_selex
version = 0.3.1
author = Kashyap Chhatbar
author_email = kashyap.cc@gmail.com
description = Perform k-mer abundance analysis in DNA sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kashyapchhatbar/eme_selex
project_urls =
    Bug Tracker = https://github.com/kashyapchhatbar/eme_selex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src